SERVER-77095 Fix canceling transaction API when using an InlineExecutor