src/mongo/db/transaction/transaction_api_test.cpp
@@ -165,17 +165,19 @@ public:
         stdx::unique_lock<Latch> ul(_mutex);
         [&]() {
             StringData cmdName = cmd.firstElementFieldNameStringData();
-            if (cmdName != AbortTransaction::kCommandName) {
+            if (!(cmdName == AbortTransaction::kCommandName ||
+                  cmdName == CommitTransaction::kCommandName)) {
                 // Only hang abort commands.
                 return;
             }
 
-            if (_hangNextAbortCommand) {
+            if (_hangNextCommitOrAbortCommand) {
                 // Tests that expect to hang an abort must use the barrier to synchronize since the
                 // abort runs on a different thread.
-                _hitHungAbort.countDownAndWait();
+                _hitHungCommitOrAbort.countDownAndWait();
             }
-            _hangNextAbortCommandCV.wait(ul, [&] { return !_hangNextAbortCommand; });
+            _hangNextCommitOrAbortCommandCV.wait(ul,
+                                                 [&] { return !_hangNextCommitOrAbortCommand; });
         }();
 
         auto cmdBob = BSONObjBuilder(std::move(cmd));
@@ -261,16 +263,16 @@ public:
         _responses.push(res);
     }
 
-    void setHangNextAbortCommand(bool enable) {
+    void setHangNextCommitOrAbortCommand(bool enable) {
         stdx::lock_guard<Latch> lg(_mutex);
-        _hangNextAbortCommand = enable;
+        _hangNextCommitOrAbortCommand = enable;
 
         // Wake up any waiting threads.
-        _hangNextAbortCommandCV.notify_all();
+        _hangNextCommitOrAbortCommandCV.notify_all();
     }
 
-    void waitForHungAbortWaiter() {
-        _hitHungAbort.countDownAndWait();
+    void waitForHungCommitOrAbort() {
+        _hitHungCommitOrAbort.countDownAndWait();
     }
 
 private:
@@ -281,9 +283,9 @@ private:
     bool _runningLocalTransaction{false};
 
     mutable Mutex _mutex = MONGO_MAKE_LATCH("MockTransactionClient");
-    mutable stdx::condition_variable _hangNextAbortCommandCV;
-    bool _hangNextAbortCommand{false};
-    mutable unittest::Barrier _hitHungAbort{2};
+    mutable stdx::condition_variable _hangNextCommitOrAbortCommandCV;
+    bool _hangNextCommitOrAbortCommand{false};
+    mutable unittest::Barrier _hitHungCommitOrAbort{2};
 };
 
 }  // namespace txn_api::details
@@ -1569,6 +1571,78 @@ TEST_F(TxnAPITest, TransactionErrorTakesPrecedenceOverUnyieldError) {
     ASSERT_EQ(resourceYielder()->timesUnyielded(), 1);
 }
 
+TEST_F(TxnAPITest, TransactionObeysCallerOpCtxBeingInterrupted) {
+    unittest::Barrier txnApiStarted(2);
+    unittest::Barrier opCtxKilled(2);
+
+    auto killerThread = stdx::thread([&txnApiStarted, &opCtxKilled, opCtx = opCtx()] {
+        txnApiStarted.countDownAndWait();
+        opCtx->markKilled(ErrorCodes::InterruptedDueToReplStateChange);
+        opCtxKilled.countDownAndWait();
+    });
+
+    // Hang commit so we know the transaction obeys the cancellation, otherwise the test would hang.
+    mockClient()->setHangNextCommitOrAbortCommand(true);
+
+    auto swResult = txnWithRetries().runNoThrow(
+        opCtx(), [&](const txn_api::TransactionClient& txnClient, ExecutorPtr txnExec) {
+            mockClient()->setNextCommandResponse(kOKInsertResponse);
+            auto insertRes =
+                txnClient
+                    .runCommand(DatabaseName::createDatabaseName_forTest(boost::none, "user"_sd),
+                                BSON("insert"
+                                     << "foo"
+                                     << "documents" << BSON_ARRAY(BSON("x" << 1))))
+                    .get();
+
+            txnApiStarted.countDownAndWait();
+            opCtxKilled.countDownAndWait();
+
+            return SemiFuture<void>::makeReady();
+        });
+
+    // The transaction should fail with the error the caller was interrupted with.
+    ASSERT_EQ(swResult.getStatus(), ErrorCodes::InterruptedDueToReplStateChange);
+
+    killerThread.join();
+}
+
+TEST_F(TxnAPITest, CallerInterruptionErrorTakesPrecedenceOverTransactionError) {
+    unittest::Barrier txnApiStarted(2);
+    unittest::Barrier opCtxKilled(2);
+
+    auto killerThread = stdx::thread([&txnApiStarted, &opCtxKilled, opCtx = opCtx()] {
+        txnApiStarted.countDownAndWait();
+        opCtx->markKilled(ErrorCodes::InterruptedDueToReplStateChange);
+        opCtxKilled.countDownAndWait();
+    });
+
+    auto swResult = txnWithRetries().runNoThrow(
+        opCtx(), [&](const txn_api::TransactionClient& txnClient, ExecutorPtr txnExec) {
+            mockClient()->setNextCommandResponse(kOKInsertResponse);
+            auto insertRes =
+                txnClient
+                    .runCommand(DatabaseName::createDatabaseName_forTest(boost::none, "user"_sd),
+                                BSON("insert"
+                                     << "foo"
+                                     << "documents" << BSON_ARRAY(BSON("x" << 1))))
+                    .get();
+
+            txnApiStarted.countDownAndWait();
+            opCtxKilled.countDownAndWait();
+
+            // Fail the transaction to verify the caller interruption error is returned instead.
+            uasserted(ErrorCodes::InternalError, "Mock error");
+
+            return SemiFuture<void>::makeReady();
+        });
+
+    // The transaction should fail with the error the caller was interrupted with.
+    ASSERT_EQ(swResult.getStatus(), ErrorCodes::InterruptedDueToReplStateChange);
+
+    killerThread.join();
+}
+
 TEST_F(TxnAPITest, ClientSession_UsesNonRetryableInternalSession) {
     opCtx()->setLogicalSessionId(makeLogicalSessionIdForTest());
     resetTxnWithRetries();
@@ -2497,7 +2571,7 @@ TEST_F(TxnAPITest, DoesNotWaitForBestEffortAbortIfCancelled) {
     mockClient()->setNextCommandResponse(kOKInsertResponse);
 
     // Hang the best effort abort that will be triggered after giving up on the transaction.
-    mockClient()->setHangNextAbortCommand(true);
+    mockClient()->setHangNextCommitOrAbortCommand(true);
     mockClient()->setNextCommandResponse(kOKCommandResponse);
 
     auto swResult = txnWithRetries().runNoThrow(
@@ -2519,12 +2593,12 @@ TEST_F(TxnAPITest, DoesNotWaitForBestEffortAbortIfCancelled) {
     ASSERT_FALSE(swResult.getStatus().isOK());
 
     // The abort should get hung and not have been processed yet.
-    mockClient()->waitForHungAbortWaiter();
+    mockClient()->waitForHungCommitOrAbort();
     auto lastRequest = mockClient()->getLastSentRequest();
     ASSERT_NE(lastRequest.firstElementFieldNameStringData(), "abortTransaction"_sd);
 
     // Unblock the abort and verify it eventually runs.
-    mockClient()->setHangNextAbortCommand(false);
+    mockClient()->setHangNextCommitOrAbortCommand(false);
     waitForAllEarlierTasksToComplete();
     expectSentAbort(0 /* txnNumber */, WriteConcernOptions().toBSON());
 }
@@ -2547,7 +2621,7 @@ TEST_F(TxnAPITest, WaitsForBestEffortAbortOnNonTransientErrorIfNotCancelled) {
     mockClient()->setNextCommandResponse(kOKInsertResponse);
 
     // Hang the best effort abort that will be triggered before retrying after we throw an error.
-    mockClient()->setHangNextAbortCommand(true);
+    mockClient()->setHangNextCommitOrAbortCommand(true);
     mockClient()->setNextCommandResponse(kOKCommandResponse);
 
     auto future = stdx::async(stdx::launch::async, [&] {
@@ -2572,12 +2646,12 @@ TEST_F(TxnAPITest, WaitsForBestEffortAbortOnNonTransientErrorIfNotCancelled) {
     ASSERT(stdx::future_status::ready != future.wait_for(Milliseconds(10).toSystemDuration()));
 
     // The abort should get hung and not have been processed yet.
-    mockClient()->waitForHungAbortWaiter();
+    mockClient()->waitForHungCommitOrAbort();
     auto lastRequest = mockClient()->getLastSentRequest();
     ASSERT_NE(lastRequest.firstElementFieldNameStringData(), "abortTransaction"_sd);
 
     // Allow the abort to finish and it should unblock the API.
-    mockClient()->setHangNextAbortCommand(false);
+    mockClient()->setHangNextCommitOrAbortCommand(false);
     future.get();
 
     // After the abort finishes, the API should not have retried.
@@ -2606,7 +2680,7 @@ TEST_F(TxnAPITest, WaitsForBestEffortAbortOnTransientError) {
     mockClient()->setNextCommandResponse(kOKInsertResponse);
 
     // Hang the best effort abort that will be triggered before retrying after we throw an error.
-    mockClient()->setHangNextAbortCommand(true);
+    mockClient()->setHangNextCommitOrAbortCommand(true);
     mockClient()->setNextCommandResponse(kOKCommandResponse);
 
     // Second attempt's insert and successful commit response.
@@ -2637,12 +2711,12 @@ TEST_F(TxnAPITest, WaitsForBestEffortAbortOnTransientError) {
     ASSERT(stdx::future_status::ready != future.wait_for(Milliseconds(10).toSystemDuration()));
 
     // The abort should get hung and not have been processed yet.
-    mockClient()->waitForHungAbortWaiter();
+    mockClient()->waitForHungCommitOrAbort();
     auto lastRequest = mockClient()->getLastSentRequest();
     ASSERT_NE(lastRequest.firstElementFieldNameStringData(), "abortTransaction"_sd);
 
     // Allow the abort to finish and it should unblock the API.
-    mockClient()->setHangNextAbortCommand(false);
+    mockClient()->setHangNextCommitOrAbortCommand(false);
     future.get();
 
     // After the abort finishes, the API should retry and successfully commit.
